salesforce/force-app/main/default/objects/Synthesis_Order__c/Synthesis_Order__c.object-meta.xml
<CustomObject>
    <label>Synthesis Order</label>
    <pluralLabel>Synthesis Orders</pluralLabel>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>