salesforce/force-app/main/default/objects/Synthesis_Order__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Synthesis Orders</relationshipLabel>
    <relationshipName>Synthesis_Orders</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>