salesforce/force-app/main/default/objects/Synthesis_Order__c/fields/Feasibility_Score__c.field-meta.xml
<CustomField>
    <fullName>Feasibility_Score__c</fullName>
    <label>Feasibility Score</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>