salesforce/force-app/main/default/objects/Synthesis_Order__c/fields/Length_bp__c.field-meta.xml
<CustomField>
    <fullName>Length_bp__c</fullName>
    <label>Length (bp)</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>