salesforce/force-app/main/default/objects/Synthesis_Order__c/fields/Progress_Pct__c.field-meta.xml
<CustomField>
    <fullName>Progress_Pct__c</fullName>
    <label>Progress %</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>