salesforce/force-app/main/default/objects/Synthesis_Order__c/fields/Promised_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Promised_Ship_Date__c</fullName>
    <label>Promised Ship Date</label>
    <type>Date</type>
</CustomField>