salesforce/force-app/main/default/objects/Synthesis_Order__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Sequence</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>