salesforce/force-app/main/default/objects/Synthesis_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Submitted</fullName><default>true</default></value>
            <value><fullName>Feasible</fullName><default>false</default></value>
            <value><fullName>Rejected</fullName><default>false</default></value>
            <value><fullName>In_Synthesis</fullName><default>false</default></value>
            <value><fullName>QC</fullName><default>false</default></value>
            <value><fullName>Shipped</fullName><default>false</default></value>
            <value><fullName>At_Risk</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>